# lecture0

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  initial_requirements.md
.agents/: client-environment-setup-agent.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_DRAFTS/: sr1-server-sprint1.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/agents/: agent-orchestration.agent.md  ai-developer.agent.md  architect.agent.md  client-developer.agent.md  client-environment-setup-agent.md  product-owner.agent.md  qa.agent.md  reviewer.agent.md  scrum-master.agent.md  server-developer.agent.md
.github/prompts/: create-design.prompt.md  create-retrospective.prompt.md  create-test-cases.prompt.md  create-user-story.prompt.md  define-interface.prompt.md  implement-task.prompt.md  (+4 more)
client/: CMakeLists.txt  README.md
client/docs/: product-backlog.md  requirements.md
client/include/camera_client/: system_info.hpp
client/include/camera_client/server_interface/: mock_server_gateway.hpp  server_gateway.hpp
client/include/camera_client/ui/: client_controller.hpp  console_view.hpp
client/sprints/: README.md  sprint-1-backlog.md  sprint-1-report.md
client/src/: main.cpp  system_info.cpp
client/src/server_interface/: mock_server_gateway.cpp  server_gateway.cpp
client/src/ui/: client_controller.cpp  console_view.cpp
client/tests/: CMakeLists.txt  INTEGRATION_ACCEPTANCE_TEST_PLAN.md  smoke_test.cpp
common/: README.md
scripts/: save_sprint_report.sh
server/: README.md  build.gradle  settings.gradle
(+31 files in other folders)
